# DoCoS

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
dep/: CMakeLists.txt  boost.cmake  cppcoro.cmake  cppcoro.config.cmake.in
samples/: CMakeLists.txt
samples/client/dep/: CMakeLists.txt
samples/client/resources/: sample.fs  sample.vs
samples/client/src/: CMakeLists.txt  main.cpp
samples/client/src/gx/camera/: camera.hpp
samples/client/src/gx/mesh/: mesh.cpp  mesh.hpp
samples/client/src/gx/shader/: program.cpp  program.hpp
samples/server/: CMakeLists.txt
samples/server/dep/: CMakeLists.txt
samples/server/src/: CMakeLists.txt  main.cpp
samples/server/src/common/: definitions.hpp
samples/server/src/core/: client.cpp  client.hpp  server.cpp  server.hpp
samples/server/src/maps/: map.hpp
src/: CMakeLists.txt  linmath.h  main.cpp
src/common/: result_of.hpp  types.hpp
src/containers/: concepts.hpp  dictionary.hpp  plain_pool.hpp  pool_item.hpp  pooled_static_vector.hpp  thread_local_tasks.cpp  thread_local_tasks.hpp  ticket.hpp
src/entity/: entity.hpp  scheme.hpp  transform.hpp
src/fiber/: exclusive_shared_work.hpp  exclusive_shared_work_impl.hpp  exclusive_work_stealing.cpp  exclusive_work_stealing.hpp  exclusive_work_stealing_impl.hpp  yield.hpp
src/fiber/detail/: yield.hpp
src/gx/: common.hpp
src/gx/camera/: camera.cpp
src/gx/mesh/: mesh.cpp  mesh.hpp
src/gx/shader/: program.cpp
src/ids/: generator.hpp
src/io/: memmap.cpp  memmap.hpp
src/traits/: base_dic.hpp  contains.hpp  has_type.hpp  shared_function.hpp  without_duplicates.hpp
src/updater/: executor.hpp  updater.hpp
